test/types/string/assignToChar/testInit.1.good
Helpers.chpl:2: In function 'testInit':
Helpers.chpl:3: error: cannot initialize 'x' of type 'int(8)' from '"a"'
Helpers.chpl:3: note: did you mean to call '.toByte()'?
  testInit.chpl:6: called as testInit(param strBytes = "a", type toType = int(8))
